[package]
name = "wac"
description = "A tool for encoding and decoding WebAssembly compositions."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Peter Huene <peter@huene.dev>"]
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
keywords = ["webassembly", "wasm", "components", "component-model"]
repository = "https://github.com/bytecodealliance/wac"

[dependencies]
wac-resolver = { workspace = true, default-features = false }
wac-parser = { workspace = true, default-features = false }
anyhow = { workspace = true }
clap = { workspace = true }
pretty_env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wat = { workspace = true }
wasmparser = { workspace = true }
wasmprinter = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
# TODO: use the next release which has support for primary labels
miette = { git = "https://github.com/zkat/miette", features = ["fancy"] }
semver = { workspace = true }
indicatif = { workspace = true, optional = true }

[features]
default = ["wit"]
wat = ["wac-resolver/wat"]
wit = ["wac-resolver/wit"]
registry = ["wac-resolver/registry", "indicatif"]

[workspace.dependencies]
wac-parser = { path = "crates/wac-parser", default-features = false }
wac-resolver = { path = "crates/wac-resolver", default-features = false }
wit-parser = "0.13.0"
wasmparser = "0.118.1"
wit-component = "0.19.0"
wasm-encoder = "0.38.1"
wasmprinter = "0.2.75"
wasm-metadata = "0.10.14"
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
semver = { version = "1.0.20", features = ["serde"] }
pretty_env_logger = "0.5.0"
log = "0.4.20"
tokio = { version = "1.34.0", default-features = false, features = ["macros", "rt-multi-thread"] }
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
indexmap = { version = "2.1.0", features = ["serde"] }
id-arena = "2.2.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
wat = "1.0.82"
logos = "0.13.0"
thiserror = "1.0.50"
# TODO: update these to 0.3.0 when it's released
warg-client = { git = "https://github.com/bytecodealliance/registry" }
warg-protocol = { git = "https://github.com/bytecodealliance/registry" }
warg-crypto = { git = "https://github.com/bytecodealliance/registry" }
warg-server = { git = "https://github.com/bytecodealliance/registry" }
futures = "0.3.29"
indicatif = "0.17.7"
pretty_assertions = "1.4.0"
