[package]
name = "wac-parser"
description = "A library for encoding and decoding WebAssembly compositions."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
logos = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
log = { workspace = true }
indexmap = { workspace = true }
id-arena = { workspace = true }
serde = { workspace = true }
wasmparser = { workspace = true }
wit-parser = { workspace = true }
wit-component = { workspace = true }
wasm-encoder = { workspace = true }
wasm-metadata = { workspace = true }
wat = { workspace = true, optional = true }
# TODO: use the next release which has support for primary labels
miette = { git = "https://github.com/zkat/miette", features = ["serde"] }

[features]
default = ["wat"]

[dev-dependencies]
owo-colors = "3.5.0"
pretty_assertions = "1.4.0"
pretty_env_logger = { workspace = true }
rayon = "1.8.0"
serde_json = { workspace = true }
wasmprinter = { workspace = true }
# TODO: use the next release which has support for primary labels
miette = { git = "https://github.com/zkat/miette", features = ["serde", "fancy"] }

[[test]]
name = "parser"
harness = false

[[test]]
name = "resolution"
harness = false

[[test]]
name = "encoding"
harness = false
