[package]
name = "wac-parser"
description = "A library for encoding and decoding WebAssembly compositions."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
logos = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
log = { workspace = true }
indexmap = { workspace = true }
id-arena = { workspace = true }
serde = { workspace = true }
wasmparser = { workspace = true }
wasm-encoder = { workspace = true }
wasm-metadata = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
# TODO: use the next release which has support for primary labels
miette = { git = "https://github.com/zkat/miette", features = ["serde"] }
wasm-wave = { git = "https://github.com/lann/wasm-wave", default-features = false, features = ["wasmtime"] }

[dev-dependencies]
wac-resolver = { workspace = true, default-features = false, features = ["wat", "wit"] }
owo-colors = "3.5.0"
pretty_assertions = { workspace = true }
pretty_env_logger = { workspace = true }
rayon = "1.8.0"
tokio = { workspace = true }
serde_json = { workspace = true }
wasmprinter = { workspace = true }
# TODO: use the next release which has support for primary labels
miette = { git = "https://github.com/zkat/miette", features = [
    "serde",
    "fancy",
] }

[[test]]
name = "parser"
harness = false

[[test]]
name = "resolution"
harness = false

[[test]]
name = "encoding"
harness = false
