[package]
name = "wac-resolver"
description = "A library for package resolvers for WAC document resolution."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }

[dependencies]
wac-types = { workspace = true }
wac-parser = { workspace = true }
semver = { workspace = true }
thiserror.workspace = true
anyhow = { workspace = true }
log = { workspace = true }
wit-component = { workspace = true }
indexmap = { workspace = true }
wat = { workspace = true, optional = true }
wit-parser = { workspace = true, optional = true }
miette = { workspace = true }
warg-client = { workspace = true }
warg-protocol = { workspace = true }
warg-crypto = { workspace = true }
warg-credentials = { workspace = true }
secrecy = { workspace = true}
tokio = { workspace = true}
futures = { workspace = true}
serde_json = "1.0.116"

[dev-dependencies]
wac-graph = { workspace = true }
wasmprinter = { workspace = true }
warg-server = { workspace = true }
pretty_assertions = { workspace = true }
tokio-util = "0.7.10"
tempdir = "0.3.7"

[features]
default = []
wat = ["dep:wat"]
wit = ["wit-parser"]

